--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
             <li>
                 <a href="assignment1.html">A1 - Simple 2D Triangle</a>
             </li>
+            <li>
+                <a href="assignment2.html">A2 - Add Rectangle</a>
+            </li>
         </ul>
     </body>
 </html>
