--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,13 @@
             <li>
                 <a href="assignment1.html">A1 - Simple 2D Triangle</a>
             </li>
+
             <li>
                 <a href="assignment2.html">A2 - Add Rectangle</a>
+            </li>
+
+            <li>
+                <a href="assignment3.html">A3 - Add Triangle</a>
             </li>
         </ul>
     </body>
