--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,25 @@
 <html>
-    <head>
-        <title>Computer Graphics</title>
-    </head>
-    <body>
-        <h1>Welcome to WebGL</h1>
-        <ul>
-            <li>
-                <a href="assignment1.html">A1 - Simple 2D Triangle</a>
-            </li>
+<head>
+    <title>Computer Graphics</title>
+</head>
+<body>
+<h1>Welcome to WebGL</h1>
+<ul>
+    <li>
+        <a href="assignment1.html">A1 - Simple 2D Triangle</a>
+    </li>
 
-            <li>
-                <a href="assignment2.html">A2 - Add Rectangle</a>
-            </li>
+    <li>
+        <a href="assignment2.html">A2 - Add Rectangle</a>
+    </li>
 
-            <li>
-                <a href="assignment3.html">A3 - Add Triangle</a>
-            </li>
-        </ul>
-    </body>
+    <li>
+        <a href="assignment3.html">A3 - Add Triangle</a>
+    </li>
+
+    <li>
+        <a href="assignment4.html">A4 - WebGL Transformations</a>
+    </li>
+</ul>
+</body>
 </html>
