--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
     <li>
         <a href="assignment4.html">A4 - WebGL Transformations</a>
     </li>
+
+    <li>
+        <a href="assignment5.html">A5 - WebGL 3D Projections</a>
+    </li>
 </ul>
 </body>
 </html>
