Assignment 6 - Moving the Camera

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
     <li>
         <a href="assignment5.html">A5 - WebGL 3D Projections</a>
     </li>
+
+    <li>
+        <a href="assignment6.html">A6 - Moving Camera</a>
+    </li>
 </ul>
 </body>
 </html>
