AS7 - Lighting and Shading

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
     <li>
         <a href="assignment6.html">A6 - Moving Camera</a>
     </li>
+
+    <li>
+        <a href="assignment7.html">A7 - Lighting and Shading</a>
+    </li>
 </ul>
 </body>
 </html>
